# nmigen-learning

./: .gitignore  README.md  pyproject.toml
fpga/: __init__.py  common.dg  ice40.py  icebreaker.dg  icebreaker.py  icebreaker_vga.dg
fpga/modules/: __init__.py  blinker.dg  pulser.dg  segment7.dg  vga.dg
fpga/resources/: pmod.py
fpga/stdio/: ice40pll.dg
tests/: test_fpga.py
