[tool.poetry]
name = "fpga"
version = "0.1.0"
description = "playing around with nmigen"
authors = ["Peder Bergebakken Sundt <pbsds@hotmail.com>"]

[tool.poetry.dependencies]
python = "~3.7"
yowasp-nextpnr-ice40-all = "^0.0.post2658.dev17"
nmigen-dg = {git = "https://github.com/pbsds/nmigen_dg"}
nmigen = "^0.2"
nmigen_boards = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
